--- a/output5/geo-locate-internet-protocol-ip-traffic-with-python.html
+++ b/output5/geo-locate-internet-protocol-ip-traffic-with-python.html
@@ -22,7 +22,8 @@
 
 
 </head>
-<body>
+<script id="dsq-count-scr" src="//noobloops.disqus.com/count.js" async></script>
+	<body>
 	<div class="topbar">
 	  <div class="topbar-inner">
 		<div class="container-fluid">
