--- a/output5/index.html
+++ b/output5/index.html
@@ -53,7 +53,32 @@
 			</div>
 		</div>
 	  </div>
-	  <div class="content">
+	 
+
+<div id="disqus_thread"></div>
+<script>
+
+/**
+*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+
+var disqus_config = function () {
+this.page.url = mak0legion.github.io/iptrace/output5/geo-locate-internet-protocol-ip-traffic-with-python.html;  // Replace PAGE_URL with your page's canonical URL variable
+ // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://ffk-1.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+                                
+
+
+ <div class="content">
 <div class="page-header"><h1> Geo-Locate Internet Protocol (IP) Traffic </h1></div>
 <div class='article'>
 	<h2>Geo-Locate Internet Protocol (IP) Traffic With Python</h2>
