--- a/output5/index.html
+++ b/output5/index.html
@@ -31,8 +31,8 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = .io;  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = git-3.disqus.com; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+this.page.url = www.mak0legion.github.io;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.identifier =; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
 (function() { // DON'T EDIT BELOW THIS LINE
