--- a/output5/index.html
+++ b/output5/index.html
@@ -31,7 +31,7 @@
 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
 
 var disqus_config = function () {
-this.page.url = www.my-site-6.disqus.com;  // Replace PAGE_URL with your page's canonical URL variable
+this.page.url = wwww.mak0legion.github.io;  // Replace PAGE_URL with your page's canonical URL variable
 this.page.identifier =geo-locate-internet-protocol-ip-traffic-with-python.html; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 };
 
