--- a/output5/index.html
+++ b/output5/index.html
@@ -98,7 +98,7 @@ database available at http://www.maxmind.com/ app/geolitecity …</p> <a class="
 
 		<footer>
 		  <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
-		  <p>&copy; Piyush Singh(mak0Legion)</p>
+		  <p>&copy; Piyush Singh(zombie)</p>
 		</footer>
 	  </div>
 
