--- a/output5/geo-locate-internet-protocol-ip-traffic-with-python.html
+++ b/output5/geo-locate-internet-protocol-ip-traffic-with-python.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-	<title>Geo-Locate Internet Protocol (IP) Traffic</title>
+	<title>Locate Internet Protocol (IP) Traffic</title>
 	<meta name="description" content="">
 	<meta name="author" content="Piyush Singh(mak0Legion)">
 
