--- a/output5/geo-locate-internet-protocol-ip-traffic.html
+++ b/output5/geo-locate-internet-protocol-ip-traffic.html
@@ -246,7 +246,7 @@ s.setAttribute('data-timestamp', +new Date());
 	</div>
 		<footer>
 		  <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
-		  <p>&copy; Piyush Singh(mak0Legion)</p>
+		  <p>&copy; Piyush Singh(zombie)</p>
 		</footer>
 	  </div>
 
